product service work v22